--- a/home.html
+++ b/home.html
@@ -8,19 +8,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .animate-fade-in { animation: fadeIn 1.5s ease-in-out; }
-    @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
     .best-seller-badge {
-      background-color: #b91c1c; color: white; font-size: 0.6rem; font-weight: 700;
-      padding: 0.15rem 0.4rem; border-radius: 0.375rem; position: absolute;
-      top: 0.5rem; right: 0.5rem; text-transform: uppercase; letter-spacing: 0.05em; z-index: 10;
+      background-color: #b91c1c;
+      color: white;
+      font-size: 0.6rem;
+      padding: 0.1rem 0.3rem;
+      border-radius: 0.375rem;
+      margin-left: 0.5rem;
+      vertical-align: middle;
     }
   </style>
 </head>
-<body class="bg-yellow-50 text-gray-900 text-sm relative">
+<body class="bg-yellow-50 text-gray-900 text-sm">
 
   <!-- Header -->
   <header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
@@ -30,7 +29,12 @@
       <a href="about.html" class="hover:underline">About Us</a>
       <a href="contact.html" class="hover:underline">Contact Us</a>
     </nav>
-    <input type="text" id="searchInput" placeholder="Search..." class="ml-4 px-2 py-1 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 w-32"/>
+    <div class="flex items-center space-x-2">
+      <input id="searchInput" type="text" placeholder="Search..." class="px-2 py-1 rounded border border-gray-300 focus:ring-2 focus:ring-red-600 w-32 text-xs"/>
+      <a href="cart.html" class="bg-red-700 text-white px-3 py-1 rounded-full shadow-lg text-sm hover:bg-red-600">
+        🛒 Cart
+      </a>
+    </div>
   </header>
 
   <!-- Hero Section -->
@@ -42,9 +46,7 @@
     </div>
     <aside class="bg-white rounded-lg shadow p-4 h-max md:w-1/3">
       <h2 class="text-lg font-bold mb-2">Your Cart</h2>
-      <div id="cart-items" class="space-y-3 text-xs">
-        <p class="text-gray-500">Your cart is empty.</p>
-      </div>
+      <div id="cart-items" class="space-y-3 text-xs"></div>
       <button id="checkout-btn" class="mt-3 w-full bg-red-700 text-white py-1 rounded text-sm" disabled>Checkout</button>
     </aside>
   </section>
@@ -53,32 +55,33 @@
   <div class="max-w-5xl mx-auto p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
     <script>
       const products = [
-        { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats.", bestSeller: true, link: "product-almonds.html" },
-        { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein and essential minerals.", bestSeller: true, link: "product-cashews.html" },
-        { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds for extra crunch and health.", bestSeller: false, link: "product-mamra-almonds.html" },
-        { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition.", bestSeller: false, link: "product-pista.html" },
-        { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants.", bestSeller: false, link: "product-walnut.html" },
-        { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun-dried raisins full of natural sugars and fiber.", bestSeller: false, link: "product-raisins.html" },
-        { name: "Mix Dry Fruits", img: "images/Mix_Dryfruits.jpg", price: 1500, desc: "A perfect mix of almonds, cashews, pista, raisins and figs.", bestSeller: false, link: "product-mix-dryfruits.html" },
-        { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun-dried figs, rich in fiber and iron.", bestSeller: false, link: "product-anjeer.html" }
+        { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High‑quality California almonds, rich in antioxidants.", bestSeller: true, link: "product-almonds.html" },
+        { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein.", bestSeller: true, link: "product-cashews.html" },
+        { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds.", bestSeller: false, link: "product-mamra-almonds.html" },
+        { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios.", bestSeller: false, link: "product-pista.html" },
+        { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain‑boosting walnuts rich in Omega‑3.", bestSeller: false, link: "product-walnut.html" },
+        { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun‑dried raisins.", bestSeller: false, link: "product-raisins.html" },
+        { name: "Mix Dry Fruits", img: "images/Mix_Dryfruits.jpg", price: 1500, desc: "Perfect mix of almonds, cashews, pista, raisins & figs.", bestSeller: false, link: "product-mix-dryfruits.html" },
+        { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun‑dried figs.", bestSeller: false, link: "product-anjeer.html" }
       ];
 
       document.addEventListener("DOMContentLoaded", () => {
         const container = document.querySelector(".grid");
         products.forEach(p => {
-          const badge = p.bestSeller ? `<div class="best-seller-badge">Best Seller</div>` : "";
           const html = `
-            <article class="relative bg-white rounded-lg shadow p-3">
-              ${badge}
+            <article class="bg-white rounded-lg shadow p-3">
               <h2 class="font-semibold mb-1 text-xs leading-tight"><a href="${p.link}" class="hover:underline">${p.name}</a></h2>
               <a href="${p.link}"><img src="${p.img}" alt="${p.name}" class="w-full h-32 object-cover rounded mb-2"/></a>
               <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
               <p class="text-gray-700 text-xs mb-1">${p.desc}</p>
-              <select class="p-1 border rounded mb-2 text-xs">
-                <option value="250">250g</option>
-                <option value="500">500g</option>
-                <option value="1000" selected>1kg</option>
-              </select>
+              <div class="flex items-center mb-2">
+                <select class="p-1 border rounded text-xs">
+                  <option value="250">250g</option>
+                  <option value="500">500g</option>
+                  <option value="1000" selected>1kg</option>
+                </select>
+                ${p.bestSeller ? '<div class="best-seller-badge">Best Seller</div>' : ''}
+              </div>
               <button class="add-to-cart w-full bg-red-600 text-white py-1 text-xs rounded" data-name="${p.name}" data-price="${p.price}">Add to Cart</button>
             </article>`;
           container.insertAdjacentHTML("beforeend", html);
@@ -122,7 +125,7 @@
     </div>
   </footer>
 
-  <!-- Cart & Payment Script -->
+  <!-- Scripts: Cart, Razorpay, Search -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
     const cartItemsDiv = document.getElementById("cart-items");
@@ -131,8 +134,8 @@
     function getCart() {
       return JSON.parse(localStorage.getItem("cart")) || [];
     }
-    function saveCart(cart) {
-      localStorage.setItem("cart", JSON.stringify(cart));
+    function saveCart(c) {
+      localStorage.setItem("cart", JSON.stringify(c));
     }
 
     function renderCart() {
@@ -140,64 +143,55 @@
       cartItemsDiv.innerHTML = c.length === 0
         ? '<p class="text-gray-500">Your cart is empty.</p>'
         : c.map((item,i) => `
-          <div class="border p-2 rounded flex justify-between items-center">
-            <div><p class="font-semibold">${item.name}</p><p>${item.grams}g - ₹${item.price.toFixed(2)}</p></div>
-            <button onclick="removeItem(${i})" class="text-red-600 text-xs">Remove</button>
-          </div>`).join('');
+            <div class="border p-2 rounded flex justify-between items-center">
+              <div><p class="font-semibold">${item.name}</p><p>${item.grams}g - ₹${item.price.toFixed(2)}</p></div>
+              <button onclick="removeItem(${i})" class="text-red-600 text-xs">Remove</button>
+            </div>`).join('');
       checkoutBtn.disabled = c.length === 0;
     }
 
     function removeItem(i) {
-      const c = getCart(); c.splice(i,1); saveCart(c); renderCart();
+      const c = getCart();
+      c.splice(i,1);
+      saveCart(c);
+      renderCart();
     }
 
     document.addEventListener("click", e => {
       if (e.target.classList.contains("add-to-cart")) {
-        const grams = parseInt(e.target.previousElementSibling.value);
+        const grams = parseInt(e.target.previousElementSibling.querySelector('select').value);
         const name = e.target.dataset.name;
         const priceKg = parseFloat(e.target.dataset.price);
-        const price = (priceKg/1000)*grams;
+        const price = (priceKg / 1000) * grams;
         const c = getCart();
         c.push({ name, grams, price });
-        saveCart(c); renderCart();
+        saveCart(c);
+        renderCart();
       }
     });
 
     checkoutBtn.addEventListener("click", () => {
       const c = getCart();
-      const total = c.reduce((s,i)=>s+i.price,0);
+      const total = c.reduce((s,i) => s + i.price, 0);
       new Razorpay({
         key: "rzp_live_LIqOpioBHDIhG4",
         amount: Math.round(total*100),
         currency: "INR",
         name: "MajeeoNuts",
-        description: "Premium Dry Fruits Purchase",
-        handler: function(resp){
-          alert("Payment successful! ID: "+resp.razorpay_payment_id);
-          localStorage.removeItem("cart");
-          renderCart();
-        },
+        description: "Dry Fruits",
+        handler: function(r){ alert("Payment successful! ID: "+r.razorpay_payment_id); localStorage.removeItem("cart"); renderCart(); },
         theme: { color: "#b91c1c" }
       }).open();
     });
 
     renderCart();
-  </script>
 
-  <!-- Search Filter -->
-  <script>
     document.getElementById('searchInput').addEventListener('input', e => {
       const q = e.target.value.toLowerCase();
-      document.querySelectorAll('article').forEach(a => {
+      document.querySelectorAll('.grid article').forEach(a => {
         a.style.display = a.innerText.toLowerCase().includes(q) ? 'block' : 'none';
       });
     });
   </script>
-
-  <!-- Floating Cart Button (Top Right) -->
-  <a href="cart.html" class="fixed top-4 right-4 bg-red-700 text-white px-4 py-2 rounded-full shadow-lg text-sm hover:bg-red-600 z-50">
-    🛒 Go to Cart
-  </a>
-
 </body>
 </html>
