--- a/product-almonds.html
+++ b/product-almonds.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Premium Almonds (Badam) - MajeeoNuts</title>
+  <title>Premium Jumbo Almond - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <style>
-    body { font-family: 'Poppins', sans-serif; }
+    body { font-family: 'Poppins', sans-serif; background-color: #fefce8; }
+    .tab-active { border-bottom: 2px solid #7f1d1d; color: #7f1d1d; }
   </style>
 </head>
-<body class="bg-sky-100 text-gray-800 text-sm">
+<body class="text-gray-900 text-sm">
 
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-6 flex items-center justify-between shadow">
@@ -23,41 +23,78 @@
   </nav>
 </header>
 
-<!-- Product Detail Section -->
-<section class="max-w-6xl mx-auto p-4 mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
-  <!-- Image & Basic Info -->
-  <div class="text-center">
-    <img src="images/almonds.webp" alt="Premium Almonds (Badam)" class="rounded shadow mb-4 w-full max-w-xs aspect-square object-cover mx-auto"/>
-    <h2 class="text-xl font-bold mb-1">Premium Almonds (Badam)</h2>
-    <select id="quantity" class="p-1 border rounded text-sm mb-2">
-      <option value="250">250g - ₹250</option>
-      <option value="500">500g - ₹500</option>
-      <option value="1000" selected>1kg - ₹1000</option>
-    </select>
-    <p class="text-red-700 font-bold text-lg mb-2">₹<span id="price">1000</span></p>
-    <p class="text-sm text-gray-500" id="cart-status"></p>
+<!-- Product Section -->
+<section class="max-w-6xl mx-auto mt-6 p-4 grid grid-cols-1 md:grid-cols-2 gap-6">
+  <!-- Product Image & Thumbnails -->
+  <div>
+    <img src="images/almonds.webp" alt="Premium Almonds" class="rounded-lg shadow w-full aspect-square object-cover">
+    <div class="flex gap-2 mt-3 justify-center">
+      <img src="images/almonds.webp" class="w-16 border rounded" />
+      <img src="images/almonds.webp" class="w-16 border rounded" />
+      <img src="images/almonds.webp" class="w-16 border rounded" />
+    </div>
   </div>
 
   <!-- Product Details -->
-  <div class="text-sm space-y-3">
-    <p><strong>Swift Delivery:</strong> Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are!</p>
-    <ul class="list-disc ml-6 text-gray-700">
-      <li>Healthy Heart</li>
-      <li>High Nutrition</li>
-      <li>Gluten Free</li>
-      <li>Cholesterol Free</li>
-    </ul>
-    <div class="flex flex-col sm:flex-row gap-4 mt-4">
-      <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800">Add to Cart</button>
-      <button onclick="buyNow()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Buy Now</button>
+  <div>
+    <h2 class="text-2xl font-semibold mb-1">Premium Jumbo Almond</h2>
+    <div class="flex items-center justify-between mb-2">
+      <select id="quantity" class="border rounded px-2 py-1 text-sm">
+        <option value="100">100 gram</option>
+        <option value="250">250 gram</option>
+        <option value="500">500 gram</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+      <p class="text-red-800 font-bold text-lg">₹<span id="price">1000</span></p>
     </div>
-    <p class="mt-2 text-gray-600">SKU: <strong>DRYF101</strong></p>
 
-    <hr class="my-4"/>
-    <h3 class="font-semibold text-base">Description</h3>
-    <p class="text-gray-700">Jumbo Almonds are rich in qualities and benefits. They help in reducing hunger and lower calorie intake. These almonds are also used to extract oil and milk. Jumbo Almonds are long in nature and have a touch of extra sweetness.</p>
-    <h3 class="font-semibold text-base mt-4">Benefits</h3>
-    <p class="text-gray-700">Almond Jumbo is a premium selection of the finest, largest, and most flavorful almonds. They provide a rich, nutty flavor and a crunchy texture, perfect for snacking or culinary use.</p>
+    <p class="text-sm mb-3">
+      <strong class="text-red-800">Swift Delivery</strong> - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are!
+    </p>
+
+    <!-- Icons -->
+    <div class="grid grid-cols-4 gap-2 text-center border p-3 rounded mb-4">
+      <div>
+        <img src="icons/heart.svg" class="w-6 h-6 mx-auto mb-1">
+        <p class="text-xs">Healthy Heart</p>
+      </div>
+      <div>
+        <img src="icons/nutrition.svg" class="w-6 h-6 mx-auto mb-1">
+        <p class="text-xs">High Nutrition</p>
+      </div>
+      <div>
+        <img src="icons/gluten.svg" class="w-6 h-6 mx-auto mb-1">
+        <p class="text-xs">Gluten Free</p>
+      </div>
+      <div>
+        <img src="icons/heart-health.svg" class="w-6 h-6 mx-auto mb-1">
+        <p class="text-xs">Cholesterol Free</p>
+      </div>
+    </div>
+
+    <!-- Cart Buttons -->
+    <div class="flex gap-3 mb-3">
+      <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800 text-sm">Add to Cart</button>
+      <button onclick="buyNow()" class="bg-green-700 text-white px-4 py-2 rounded hover:bg-green-800 text-sm">Buy Now</button>
+    </div>
+
+    <!-- Cart Status -->
+    <div id="cart-status" class="text-sm text-green-700 font-medium mb-2"></div>
+
+    <p class="text-gray-600 text-xs">SKU: <strong>DRYF101</strong></p>
+    <p class="text-sm text-gray-800 mt-2"><strong>Description:</strong> Jumbo Almonds are rich in qualities and benefits. Jumbo almonds help reduce hunger and calorie intake. Also used to extract oil and milk. Long in nature, extra sweet.</p>
+  </div>
+</section>
+
+<!-- Tabs -->
+<section class="max-w-6xl mx-auto p-4">
+  <div class="flex space-x-6 border-b text-sm font-medium mb-4">
+    <button class="tab-active">Description</button>
+    <button class="text-gray-500 hover:text-red-700">Benefits</button>
+  </div>
+  <div class="bg-white p-4 rounded-lg shadow text-sm text-gray-700 leading-relaxed">
+    <p><strong>Premium Jumbo Almond</strong> is a premium selection of the finest, largest, and most flavorful almonds, carefully sourced for an unparalleled snacking experience.</p>
+    <p class="mt-2">These jumbo-sized almonds boast a rich, nutty flavor and a delightfully crunchy texture. Ideal for health-conscious individuals or to elevate your desserts and cooking.</p>
   </div>
 </section>
 
@@ -72,19 +109,19 @@
       <div>
         <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
         <ul class="text-gray-600 space-y-1">
-          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+          <li><a href="about.html" class="hover:text-red-700">About Us</a></li>
+          <li><a href="contact.html" class="hover:text-red-700">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:text-red-700">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:text-red-700">Shopping</a></li>
         </ul>
       </div>
       <div>
         <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
         <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+          <li><a href="account.html" class="hover:text-red-700">My Account</a></li>
+          <li><a href="privacy.html" class="hover:text-red-700">Privacy Policy</a></li>
+          <li><a href="return.html" class="hover:text-red-700">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:text-red-700">Terms & Conditions</a></li>
         </ul>
       </div>
       <div>
@@ -106,9 +143,12 @@
   const priceDisplay = document.getElementById("price");
   const cartStatus = document.getElementById("cart-status");
 
+  const basePrice = 10; // ₹10 per 10g
+
   quantitySelect.addEventListener("change", () => {
     const grams = parseInt(quantitySelect.value);
-    priceDisplay.innerText = grams; // 1g = ₹1 (as per homepage)
+    const price = grams; // ₹1 per gram
+    priceDisplay.innerText = price;
   });
 
   function addToCart() {
@@ -116,8 +156,8 @@
     const price = grams;
     const product = {
       name: "Premium Almonds (Badam)",
-      grams,
-      price
+      quantity: grams,
+      price: price / (grams / 100) // Per 100g price for consistency
     };
     cart.push(product);
     localStorage.setItem("majeeoCart", JSON.stringify(cart));
@@ -126,8 +166,7 @@
 
   function buyNow() {
     const grams = parseInt(quantitySelect.value);
-    const price = grams;
-    const total = price;
+    const total = grams;
     const options = {
       key: "rzp_live_LIqOpioBHDIhG4",
       amount: total * 100,
@@ -140,11 +179,9 @@
       prefill: { email: "maheshgawade7799@gmail.com" },
       theme: { color: "#b91c1c" }
     };
-    const rzp = new Razorpay(options);
-    rzp.open();
+    new Razorpay(options).open();
   }
 </script>
-
 </body>
 </html>
 
