--- a/product-almonds.html
+++ b/product-almonds.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Premium Jumbo Almond - MajeeoNuts</title>
+  <title>Premium Almonds (Badam) - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <style>
-    body { font-family: 'Poppins', sans-serif; background-color: #fefce8; }
-    .tab-active { border-bottom: 2px solid #7f1d1d; color: #7f1d1d; }
+    body { font-family: 'Poppins', sans-serif; }
+    .tab-active {
+      border-bottom: 2px solid #991b1b; /* red-800 */
+      color: #991b1b;
+    }
   </style>
 </head>
-<body class="text-gray-900 text-sm">
+<body class="bg-yellow-50 text-gray-800 text-sm">
 
 <!-- Header -->
 <header class="bg-red-800 text-white py-3 px-6 flex items-center justify-between shadow">
@@ -24,77 +28,82 @@
 </header>
 
 <!-- Product Section -->
-<section class="max-w-6xl mx-auto mt-6 p-4 grid grid-cols-1 md:grid-cols-2 gap-6">
-  <!-- Product Image & Thumbnails -->
+<section class="max-w-6xl mx-auto p-4 mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+  <!-- Product Images -->
   <div>
-    <img src="images/almonds.webp" alt="Premium Almonds" class="rounded-lg shadow w-full aspect-square object-cover">
-    <div class="flex gap-2 mt-3 justify-center">
-      <img src="images/almonds.webp" class="w-16 border rounded" />
-      <img src="images/almonds.webp" class="w-16 border rounded" />
-      <img src="images/almonds.webp" class="w-16 border rounded" />
+    <img src="images/almonds.webp" alt="Premium Almonds" class="w-full max-w-sm mx-auto rounded shadow aspect-square object-cover"/>
+    <div class="flex justify-center gap-2 mt-3">
+      <img src="images/almonds.webp" class="w-12 h-12 border rounded" />
+      <img src="images/almonds.webp" class="w-12 h-12 border rounded" />
+      <img src="images/almonds.webp" class="w-12 h-12 border rounded" />
     </div>
   </div>
 
-  <!-- Product Details -->
+  <!-- Product Info -->
   <div>
-    <h2 class="text-2xl font-semibold mb-1">Premium Jumbo Almond</h2>
-    <div class="flex items-center justify-between mb-2">
-      <select id="quantity" class="border rounded px-2 py-1 text-sm">
-        <option value="100">100 gram</option>
-        <option value="250">250 gram</option>
-        <option value="500">500 gram</option>
-        <option value="1000" selected>1 kg</option>
-      </select>
-      <p class="text-red-800 font-bold text-lg">₹<span id="price">1000</span></p>
+    <h2 class="text-2xl font-semibold">Premium Jumbo Almond</h2>
+    <select id="quantity" class="mt-2 mb-1 p-1 border rounded text-sm">
+      <option value="100">100 gram</option>
+      <option value="250">250 gram</option>
+      <option value="500">500 gram</option>
+      <option value="1000" selected>1 kg</option>
+    </select>
+    <p class="text-red-700 font-bold text-xl mb-3">₹<span id="price">1000</span></p>
+
+    <p class="text-sm text-gray-700 mb-2"><strong>Swift Delivery</strong> - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are!</p>
+
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 text-center text-xs mb-4">
+      <div>
+        <img src="icons/heart.png" class="w-8 h-8 mx-auto" />
+        <p>Healthy Heart</p>
+      </div>
+      <div>
+        <img src="icons/nutrition.png" class="w-8 h-8 mx-auto" />
+        <p>High Nutrition</p>
+      </div>
+      <div>
+        <img src="icons/glutenfree.png" class="w-8 h-8 mx-auto" />
+        <p>Gluten Free</p>
+      </div>
+      <div>
+        <img src="icons/cholesterol.png" class="w-8 h-8 mx-auto" />
+        <p>Cholesterol Free</p>
+      </div>
     </div>
 
-    <p class="text-sm mb-3">
-      <strong class="text-red-800">Swift Delivery</strong> - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are!
+    <div class="flex gap-4">
+      <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800">Add to Cart</button>
+    </div>
+    <p id="cart-status" class="text-green-700 mt-2 text-sm"></p>
+
+    <p class="mt-4 text-gray-700">SKU: <strong>DRYF101</strong></p>
+    <p class="text-gray-700 mt-2"><strong>Description:</strong><br>
+    Jumbo Almonds are rich in Qualities and benefits, Jumbo almonds help in reducing the Hunger and reduce the intake of calories. These Almonds can be used to Extract oil and Milk. Jumbo Almonds are long in nature and Extra bit in sweetness.
     </p>
-
-    <!-- Icons -->
-    <div class="grid grid-cols-4 gap-2 text-center border p-3 rounded mb-4">
-      <div>
-        <img src="icons/heart.svg" class="w-6 h-6 mx-auto mb-1">
-        <p class="text-xs">Healthy Heart</p>
-      </div>
-      <div>
-        <img src="icons/nutrition.svg" class="w-6 h-6 mx-auto mb-1">
-        <p class="text-xs">High Nutrition</p>
-      </div>
-      <div>
-        <img src="icons/gluten.svg" class="w-6 h-6 mx-auto mb-1">
-        <p class="text-xs">Gluten Free</p>
-      </div>
-      <div>
-        <img src="icons/heart-health.svg" class="w-6 h-6 mx-auto mb-1">
-        <p class="text-xs">Cholesterol Free</p>
-      </div>
-    </div>
-
-    <!-- Cart Buttons -->
-    <div class="flex gap-3 mb-3">
-      <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800 text-sm">Add to Cart</button>
-      <button onclick="buyNow()" class="bg-green-700 text-white px-4 py-2 rounded hover:bg-green-800 text-sm">Buy Now</button>
-    </div>
-
-    <!-- Cart Status -->
-    <div id="cart-status" class="text-sm text-green-700 font-medium mb-2"></div>
-
-    <p class="text-gray-600 text-xs">SKU: <strong>DRYF101</strong></p>
-    <p class="text-sm text-gray-800 mt-2"><strong>Description:</strong> Jumbo Almonds are rich in qualities and benefits. Jumbo almonds help reduce hunger and calorie intake. Also used to extract oil and milk. Long in nature, extra sweet.</p>
   </div>
 </section>
 
 <!-- Tabs -->
-<section class="max-w-6xl mx-auto p-4">
-  <div class="flex space-x-6 border-b text-sm font-medium mb-4">
-    <button class="tab-active">Description</button>
-    <button class="text-gray-500 hover:text-red-700">Benefits</button>
+<section class="max-w-6xl mx-auto mt-8 px-4">
+  <div class="flex gap-6 text-sm border-b">
+    <button onclick="showTab('desc')" id="tab-desc" class="pb-2 tab-active">Description</button>
+    <button onclick="showTab('benefits')" id="tab-benefits" class="pb-2">Benefits</button>
   </div>
-  <div class="bg-white p-4 rounded-lg shadow text-sm text-gray-700 leading-relaxed">
-    <p><strong>Premium Jumbo Almond</strong> is a premium selection of the finest, largest, and most flavorful almonds, carefully sourced for an unparalleled snacking experience.</p>
-    <p class="mt-2">These jumbo-sized almonds boast a rich, nutty flavor and a delightfully crunchy texture. Ideal for health-conscious individuals or to elevate your desserts and cooking.</p>
+
+  <div id="content-desc" class="mt-4">
+    <h3 class="text-base font-semibold mb-1">Premium Jumbo Almond</h3>
+    <p>Almond Jumbo is a premium selection of the finest, largest, and most flavorful almonds, carefully sourced to deliver an unparalleled snacking experience.</p>
+    <p class="mt-2">These jumbo-sized almonds boast a rich, nutty flavor and a delightfully crunchy texture that sets them apart from ordinary almonds.</p>
+    <p class="mt-2">They make a versatile addition to your diet—perfect for snacks, meals, baking, or even a post-workout boost.</p>
+  </div>
+
+  <div id="content-benefits" class="mt-4 hidden">
+    <ul class="list-disc ml-5 space-y-2">
+      <li>Rich in Vitamin E and healthy fats to promote glowing skin and strong hair.</li>
+      <li>Supports heart health and reduces bad cholesterol levels.</li>
+      <li>Boosts brain function and energy levels naturally.</li>
+      <li>Great for weight management due to high satiety and fiber content.</li>
+    </ul>
   </div>
 </section>
 
@@ -109,19 +118,19 @@
       <div>
         <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
         <ul class="text-gray-600 space-y-1">
-          <li><a href="about.html" class="hover:text-red-700">About Us</a></li>
-          <li><a href="contact.html" class="hover:text-red-700">Contact Us</a></li>
-          <li><a href="bulk-order.html" class="hover:text-red-700">Bulk Ordering</a></li>
-          <li><a href="shop.html" class="hover:text-red-700">Shopping</a></li>
+          <li><a href="about.html" class="hover:underline">About Us</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:underline">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:underline">Shopping</a></li>
         </ul>
       </div>
       <div>
         <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
         <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-red-700">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-red-700">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-red-700">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-red-700">Terms & Conditions</a></li>
+          <li><a href="account.html" class="hover:underline">My Account</a></li>
+          <li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li>
+          <li><a href="return.html" class="hover:underline">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:underline">Terms & Conditions</a></li>
         </ul>
       </div>
       <div>
@@ -136,6 +145,7 @@
   </div>
 </footer>
 
+<!-- Scripts -->
 <script>
   let cart = JSON.parse(localStorage.getItem("majeeoCart")) || [];
 
@@ -143,45 +153,39 @@
   const priceDisplay = document.getElementById("price");
   const cartStatus = document.getElementById("cart-status");
 
-  const basePrice = 10; // ₹10 per 10g
-
-  quantitySelect.addEventListener("change", () => {
+  function updatePrice() {
     const grams = parseInt(quantitySelect.value);
-    const price = grams; // ₹1 per gram
-    priceDisplay.innerText = price;
-  });
+    const ratePerKg = 1000; // ₹1000 per 1kg
+    const price = (ratePerKg / 1000) * grams;
+    priceDisplay.innerText = price.toFixed(0);
+  }
+
+  quantitySelect.addEventListener("change", updatePrice);
+  updatePrice();
 
   function addToCart() {
     const grams = parseInt(quantitySelect.value);
-    const price = grams;
+    const price = (1000 / 1000) * grams;
     const product = {
       name: "Premium Almonds (Badam)",
-      quantity: grams,
-      price: price / (grams / 100) // Per 100g price for consistency
+      price,
+      quantity: grams
     };
     cart.push(product);
     localStorage.setItem("majeeoCart", JSON.stringify(cart));
-    cartStatus.innerText = `${grams}g added to cart.`;
+    cartStatus.innerText = `${grams}g added to cart successfully.`;
   }
 
-  function buyNow() {
-    const grams = parseInt(quantitySelect.value);
-    const total = grams;
-    const options = {
-      key: "rzp_live_LIqOpioBHDIhG4",
-      amount: total * 100,
-      currency: "INR",
-      name: "MajeeoNuts",
-      description: "Premium Almonds Purchase",
-      handler: function (response) {
-        alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
-      },
-      prefill: { email: "maheshgawade7799@gmail.com" },
-      theme: { color: "#b91c1c" }
-    };
-    new Razorpay(options).open();
+  function showTab(tab) {
+    document.getElementById("content-desc").classList.add("hidden");
+    document.getElementById("content-benefits").classList.add("hidden");
+    document.getElementById("tab-desc").classList.remove("tab-active");
+    document.getElementById("tab-benefits").classList.remove("tab-active");
+
+    document.getElementById("content-" + tab).classList.remove("hidden");
+    document.getElementById("tab-" + tab).classList.add("tab-active");
   }
 </script>
+
 </body>
 </html>
-
